# golden-codex-api

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  batch_genesis.py
.github/workflows/: deploy-docs.yml
api-reference/: index.html
docs/: authentication.md  getting-started.md
docs-site/: index.html
docs-site/getting-started/: index.html
gateway/: Dockerfile  deploy.sh  requirements.txt
gateway/app/: __init__.py  config.py  main.py
gateway/app/models/: __init__.py  schemas.py
gateway/app/routers/: account.py  estimate.py  jobs.py
gateway/app/services/: auth.py  jobs.py  rate_limit.py  tokens.py
getting-started/: index.html
openapi/: openapi.yaml
sdks/node/: README.md  package.json  tsconfig.json
sdks/node/src/: client.ts  errors.ts  index.ts  types.ts
sdks/node/src/resources/: account.ts  jobs.ts  webhooks.ts
sdks/python/: README.md  pyproject.toml
sdks/python/golden_codex/: __init__.py  client.py  errors.py  webhooks.py
